Add xmm function

--- a/lab5_dom1/lab5_dom1.vcxproj
+++ b/lab5_dom1/lab5_dom1.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <MASM Include="functions.asm" />
+    <MASM Include="xmm_functions.asm" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
