--- a/lab5_dom1/lab5_dom1.vcxproj.filters
+++ b/lab5_dom1/lab5_dom1.vcxproj.filters
@@ -18,6 +18,9 @@
     <MASM Include="functions.asm">
       <Filter>Source Files</Filter>
     </MASM>
+    <MASM Include="xmm_functions.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
